LEGACY_IMPORT/Legacy NeuronX/docs/EVIDENCE/testing/2026-01-11_ci-gates/01_test-integration_before.txt
PHASE 0B - BASELINE PROOF - GATE 1 RUN (CI-IDENTICAL)

Command: pnpm -w test:integration
Exit code: 1

Full output (last 200 lines captured):

      ✓ should fail_closed for admin endpoints with unknown tenant (3 ms)
      ✓ should never block health check endpoints
    Webhook Flow Ordering - Security First
      ✓ should apply rate limiting to webhook endpoints (1 ms)
      ✓ should include provider ID in webhook rate limit keys (1 ms)
      ✓ should handle invalid signature followed by rate limiting (1 ms)
    Route Key Generation - Endpoint Grouping
      ✓ should group similar API endpoints together
      ✓ should exclude health endpoints from rate limiting (1 ms)
    Entitlement-Aware Policies
      ✓ should apply different policies based on tenant tier
      ✓ should apply conservative policies for unknown tenants
    Global Disable Functionality
      ✓ should bypass rate limiting when globally disabled (1 ms)
    Webhook Security Ordering - Signature Before Rate Limit
      ✓ should not apply rate limiting to webhook endpoints (guard bypassed) (1 ms)
      ✓ should still apply rate limiting to API endpoints

Test Suites: 1 passed, 1 total
Tests:       22 passed, 22 total
Snapshots:   0 total
Time:        0.612 s
Ran all test suites matching /apps\/core-api\/src\/rate-limit\/__tests__\/rate-limit.guard.spec.ts/i.
FAIL apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts
  Webhook Security Ordering - Signature Before Rate Limit
    GHL Webhook Controller Ordering
      ✕ should reject invalid signature before rate limiting is called (7 ms)
      ✕ should call rate limiting after valid signature verification (3 ms)
      ✕ should reject rate limited requests after valid signature (2 ms)
      ✕ should process business logic only after signature + rate limit pass (1 ms)
    Payment Webhook Controller Ordering
      ✕ should reject invalid signature before rate limiting is called (2 ms)
      ✕ should call rate limiting after valid signature verification (1 ms)
      ✕ should reject rate limited requests after valid signature (1 ms)
    Security Guarantees
      ✕ should prevent unauthenticated spam from consuming rate limit quota (1 ms)
      ✕ should only consume rate limit quota for authenticated requests (1 ms)

  ● Webhook Security Ordering - Signature Before Rate Limit › GHL Webhook Controller Ordering › should reject invalid signature before rate limiting is called

    expect(received).rejects.toThrow()

    Matcher error: received value must be a promise or a function returning a promise

    Received has value: undefined

      148 |           mockRequest as any
      149 |         )
    > 150 |       ).rejects.toThrow(UnauthorizedException);
          |                 ^
      151 |
      152 |       // Rate limit service should NOT be called for invalid signatures
      153 |       expect(mockRateLimitService.enforceWebhookRateLimit).not.toHaveBeenCalled();

      at Object.toThrow (node_modules/.pnpm/expect@29.7.0/node_modules/expect/build/index.js:204:13)
      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:150:17)

  ● Webhook Security Ordering - Signature Before Rate Limit › GHL Webhook Controller Ordering › should call rate limiting after valid signature verification

    expect(jest.fn()).toHaveBeenCalledWith(...expected)

    Expected: {"providerId": "ghl", "req": {"headers": {"x-request-id": "test-request-id", "x-tenant-id": "test-tenant", "x-webhook-signature": "valid-signature"}, "method": "POST", "url": "/integrations/ghl/webhooks"}}

    Number of calls: 0

      168 |
      169 |       // Rate limit service should be called AFTER signature verification
    > 170 |       expect(mockRateLimitService.enforceWebhookRateLimit).toHaveBeenCalledWith({
          |                                                            ^
      171 |         req: mockRequest,
      172 |         providerId: 'ghl',
      173 |       });

      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:170:60)

  ● Webhook Security Ordering - Signature Before Rate Limit › GHL Webhook Controller Ordering › should reject rate limited requests after valid signature

    expect(received).rejects.toThrow()

    Matcher error: received value must be a promise or a function returning a promise

    Received has value: undefined

      194 |           mockRequest as any
      195 |         )
    > 196 |       ).rejects.toThrow('Rate limit exceeded');
          |                 ^
      197 |
      198 |       // Verify rate limit was checked
      199 |       expect(mockRateLimitService.enforceWebhookRateLimit).toHaveBeenCalledWith({

      at Object.toThrow (node_modules/.pnpm/expect@29.7.0/node_modules/expect/build/index.js:204:13)
      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:196:17)

  ● Webhook Security Ordering - Signature Before Rate Limit › GHL Webhook Controller Ordering › should process business logic only after signature + rate limit pass

    expect(jest.fn()).toHaveBeenCalledTimes(expected)

    Expected number of calls: 1
    Received number of calls: 0

      218 |       // Verify the correct order:
      219 |       // 1. processWebhook called first (signature verification)
    > 220 |       expect(mockWebhookNormalizer.processWebhook).toHaveBeenCalledTimes(1);
          |                                                    ^
      221 |
      222 |       // 2. enforceWebhookRateLimit called second (rate limiting)
      223 |       expect(mockRateLimitService.enforceWebhookRateLimit).toHaveBeenCalledTimes(1);

      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:220:52)

  ● Webhook Security Ordering - Signature Before Rate Limit › Payment Webhook Controller Ordering › should reject invalid signature before rate limiting is called

    expect(received).rejects.toThrow()

    Matcher error: received value must be a promise or a function returning a promise

    Received has value: undefined

      254 |           mockRequest as any
      255 |         )
    > 256 |       ).rejects.toThrow(UnauthorizedException);
          |                 ^
      257 |
      258 |       // Rate limit service should NOT be called for invalid signatures
      259 |       expect(mockRateLimitService.enforceWebhookRateLimit).not.toHaveBeenCalled();

      at Object.toThrow (node_modules/.pnpm/expect@29.7.0/node_modules/expect/build/index.js:204:13)
      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:256:17)

  ● Webhook Security Ordering - Signature Before Rate Limit › Payment Webhook Controller Ordering › should call rate limiting after valid signature verification

    expect(jest.fn()).toHaveBeenCalledWith(...expected)

    Expected: {"providerId": "stripe", "req": {"headers": {"stripe-signature": "valid-stripe-signature", "x-tenant-id": "payment-tenant"}, "method": "POST", "url": "/payments/webhooks/stripe"}}

    Number of calls: 0

      278 |
      279 |       // Rate limit service should be called AFTER signature verification
    > 280 |       expect(mockRateLimitService.enforceWebhookRateLimit).toHaveBeenCalledWith({
          |                                                            ^
      281 |         req: mockRequest,
      282 |         providerId: 'stripe',
      283 |       });

      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:280:60)

  ● Webhook Security Ordering - Signature Before Rate Limit › Payment Webhook Controller Ordering › should reject rate limited requests after valid signature

    expect(received).rejects.toThrow()

    Matcher error: received value must be a promise or a function returning a promise

    Received has value: undefined

      310 |           mockRequest as any
      311 |         )
    > 312 |       ).rejects.toThrow('Rate limit exceeded');
          |                 ^
      313 |
      314 |       // Verify rate limit was checked
      315 |       expect(mockRateLimitService.enforceWebhookRateLimit).toHaveBeenCalledWith({

      at Object.toThrow (node_modules/.pnpm/expect@29.7.0/node_modules/expect/build/index.js:204:13)
      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:312:17)

  ● Webhook Security Ordering - Signature Before Rate Limit › Security Guarantees › should prevent unauthenticated spam from consuming rate limit quota

    ReferenceError: validHeaders is not defined

      333 |         await ghlController.processWebhook(
      334 |         { event: 'contact.created' },
    > 335 |         { ...validHeaders, 'x-webhook-signature': 'invalid' },
          |              ^
      336 |         mockRes,
      337 |         mockRequest as any
      338 |         );

      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:335:16)

  ● Webhook Security Ordering - Signature Before Rate Limit › Security Guarantees › should only consume rate limit quota for authenticated requests

    ReferenceError: validHeaders is not defined

      358 |       await ghlController.processWebhook(
      359 |         { event: 'contact.created' },
    > 360 |         { ...validHeaders, 'x-webhook-signature': 'invalid' },
          |              ^
      361 |         mockRes,
      362 |         mockRequest as any
      363 |       );

      at Object.<anonymous> (apps/core-api/src/rate-limit/__tests__/webhook-ordering.spec.ts:360:14)

Test Suites: 1 failed, 1 total
Tests:       9 failed, 9 total
Snapshots:   0 total
Time:        0.582 s
Ran all test suites matching /apps\/core-api\/src\/rate-limit\/__tests__\/webhook-ordering.spec.ts/i.